// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding: 0 0 0 1rem;
}

<Clean.ul
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</Clean.ul>
`;

exports[`<List /> with columns set renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding: 0 0 0 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 .ListItem-llUgLb {
  -webkit-flex: 1 1 33.333333333333336%;
  -ms-flex: 1 1 33.333333333333336%;
  flex: 1 1 33.333333333333336%;
}

<Clean.ul
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</Clean.ul>
`;

exports[`<List /> with ordered prop renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding: 0 0 0 1rem;
}

<Clean.ol
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</Clean.ol>
`;

exports[`<List /> with responsive columns set renders correctly 1`] = `
.c0 {
  margin: 1rem 0;
  padding: 0 0 0 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 .ListItem-llUgLb {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

@media (min-width:40rem) {
  .c0 .ListItem-llUgLb {
    -webkit-flex: 1 1 50%;
    -ms-flex: 1 1 50%;
    flex: 1 1 50%;
  }
}

@media (min-width:52rem) {
  .c0 .ListItem-llUgLb {
    -webkit-flex: 1 1 33.333333333333336%;
    -ms-flex: 1 1 33.333333333333336%;
    flex: 1 1 33.333333333333336%;
  }
}

<Clean.ul
  className="c0"
>
  <ListItem>
    Hello Item 1
  </ListItem>
  <ListItem>
    Hello Item 2
  </ListItem>
  <ListItem>
    Hello Item 3
  </ListItem>
</Clean.ul>
`;
